2021-05-04  Jacob Bachmeyer  <jcb@gnu.org>

	PR48155

	* runtest.exp: Tighten regexp used to validate output from
	config.guess.  The previous regexp would accept an error produced
	if config.guess was incorrectly run using the C shell.

2021-04-28  Jacob Bachmeyer  <jcb@gnu.org>

	* configure, Makefile.in: Regenerate.

	* runtest.exp, configure.ac, doc/version.texi: Update version.

	* Makefile.am (TAR_OPTIONS): Explicitly select v7 tarball format
	to work around Automake limitation of assuming that v7 is default.

2021-04-20  Jacob Bachmeyer  <jcb@gnu.org>

	* configure.ac: Set Automake options to use the ancient and
	universal V7 format when building distribution tarballs.  The
	limitations of this format are not expected to impact DejaGnu; the
	"ustar" format will be used instead if this is proved wrong.

	* Makefile.am (TAR_OPTIONS): Add exported environment variable to
	set options when building distribution tarballs.  Ensure that all
	files in distribution tarballs will be recorded as owned by root.

2021-04-16  Jacob Bachmeyer  <jcb@gnu.org>

	PR47382

	* dejagnu (command): Use Awk instead of non-portable basename(1)
	and a non-portable sed(1) pattern to initially set this variable.

	* dejagnu: Use shell "case" pattern match instead of non-portable
	"grep -q" to determine if "awk" is GNU Awk.

	* dejagnu: Use Awk instead of non-portable "grep -q" to verify
	that a file contains a help message.  Also use Awk to extract help
	messages from files, instead of a complex dynamic sed(1) program.

	* configure.ac: Remove experimental support for propagating
	CONFIG_SHELL to scripts in the source directory.

	* runtest.exp: Use CONFIG_SHELL or SHELL environment variable when
	running config.guess.  Check the result carefully and stop with an
	error immediately if running config.guess does not produce
	something that plausibly resembles a triplet.  Advise the user
	that SHELL or CONFIG_SHELL may need to be set in the environment.
