@@ -30,7 +30,7 @@ EXTRA_DIST = ChangeLog-1992 MAINTAINERS dejagnu runtest \
 	$(commands_DATA) $(TESTSUITE_FILES) $(TEXINFO_TEX)\
 	$(CONTRIB)
 
-CLEANFILES = dbg.log nested-init.exp
+CLEANFILES = dbg.log nested-init.exp pr48155-init.exp
 
 clean-local: clean-local-check
 .PHONY: clean-local-check
@@ -208,6 +208,7 @@ TESTSUITE_FILES = \
 	testsuite/runtest.main/pr42399.exp \
 	testsuite/runtest.main/nested/testsuite/bug.test/pr42399.awk \
 	testsuite/runtest.main/nested/testsuite/bug.test/pr42399-sub.exp \
+	testsuite/runtest.main/pr48155.exp \
 	testsuite/lib/bohman_ssd.exp \
 	testsuite/lib/launcher.exp \
 	testsuite/lib/libdejagnu.exp \
